# speed_test

./: conn_test.py  conn_test_server.py  exp.py  pyproject.toml  speedtest-cli_api_response.txt
tests/: test_conn_speed.py
